--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学海航行 - 学习进度可视化平台</title>
+    <title>觅我 - 学习进度可视化平台</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -126,7 +126,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <i class="fas fa-graduation-cap me-2"></i>学海航行
+                <i class="fas fa-graduation-cap me-2"></i>觅我
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -228,21 +228,21 @@
                     </div>
                     <div class="card-body">
                         <div class="task-item">
-                            <h6>完成HTML/CSS学习</h6>
+                            <h6>完成董锐老师微分中值定理思考题</h6>
                             <div class="progress mb-2">
                                 <div class="progress-bar bg-success" style="width: 100%"></div>
                             </div>
-                            <small class="text-muted">已完成 · 2023-10-15</small>
+                            <small class="text-muted">已完成 · 2025-11-23</small>
                         </div>
                         <div class="task-item">
-                            <h6>JavaScript进阶学习</h6>
+                            <h6>CSAPP学习</h6>
                             <div class="progress mb-2">
                                 <div class="progress-bar" style="width: 75%"></div>
                             </div>
-                            <small class="text-muted">进行中 · 预计10天后完成</small>
+                            <small class="text-muted">进行中 · 预计60天后完成</small>
                         </div>
                         <div class="task-item">
-                            <h6>数据结构与算法</h6>
+                            <h6>mit线性代数</h6>
                             <div class="progress mb-2">
                                 <div class="progress-bar" style="width: 40%"></div>
                             </div>
@@ -289,14 +289,15 @@
                     </div>
                     <div class="card-body">
                         <div class="note-card p-3 mb-3">
-                            <h6>CSS Flexbox布局详解</h6>
-                            <p class="mb-1">Flexbox是一种一维布局模型，能够高效地实现元素在容器中的对齐、分布和排序...</p>
+                            <h6>凯撒加密</h6>
+                            <p class="mb-1">例如'Y'+9超过了'Z'，因为要想Y加了之后不溢出，只能让加了之后的那个'Y'+9比A大的不够26，超过26，比如30的话，循环变成4即可，也就是对26取余。所以就可以这样写【（要移动的那个字符，例如Y）+（移动的步数）-'A'】得到与A的距离，再把这个距离对26取余，再加A即可
+</p>
                             <small class="text-muted">2023-10-12</small>
                         </div>
                         <div class="note-card p-3">
-                            <h6>JavaScript闭包概念</h6>
-                            <p class="mb-1">闭包是指有权访问另一个函数作用域中变量的函数。创建闭包的常见方式是在一个函数内部创建另一个函数...</p>
-                            <small class="text-muted">2023-10-08</small>
+                            <h6>c语言中fgets函数的使用</h6>
+                            <p class="mb-1"> fgets()的核心功能就一个：从某个“数据来源”读取一整行内容，包括空格，然后存到你指定的“容器”里。</p>
+                            <small class="text-muted">2025-11-23</small>
                         </div>
                         <div class="text-center mt-3">
                             <a href="web/notes.html" class="btn btn-outline-primary">查看所有笔记</a>
@@ -311,14 +312,14 @@
                     </div>
                     <div class="card-body">
                         <div class="reflection-card p-3 mb-3">
-                            <h6>学习需要系统性</h6>
-                            <p class="mb-1">今天意识到碎片化学习效果有限，需要建立知识体系，将知识点串联起来...</p>
-                            <small class="text-muted">2023-10-10</small>
+                            <h6>生活的最大天敌就是不自觉的陷入虚假的表演——不是做自己，而是在表演别人眼中的自己。</h6>
+                            <p class="mb-1">我们需要对具有表演性的积极状态保持高度的警惕。与其追求被人仰望的的、抽象的伟大，不如平和地专注当下的行动</p>
+                            <small class="text-muted">2025-11-23</small>
                         </div>
                         <div class="reflection-card p-3">
-                            <h6>坚持的力量</h6>
-                            <p class="mb-1">连续学习30天了，虽然进步缓慢，但回头看看已经走了很远。坚持是学习最重要的品质...</p>
-                            <small class="text-muted">2023-10-05</small>
+                            <h6>怎么样能开心地活着？</h6>
+                            <p class="mb-1">或者有能和欲望匹配的能力，或者有能把欲望稀释的胸怀</p>
+                            <small class="text-muted">2025-11-23</small>
                         </div>
                         <div class="text-center mt-3">
                             <a href="web/reflections.html" class="btn btn-outline-primary">查看所有感悟</a>
@@ -334,8 +335,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>学海航行</h5>
-                    <p>一个帮助你跟踪学习进度、记录学习点滴的平台。</p>
+                    <h5>觅我</h5>
+                    <p>一个华中科技大学大一新生帮助自己跟踪学习进度、记录学习点滴的平台。</p>
                 </div>
                 <div class="col-md-3">
                     <h5>快速链接</h5>
@@ -355,7 +356,7 @@
             </div>
             <hr class="my-4 bg-light">
             <div class="text-center">
-                <p>&copy; 2023 学海航行 - 所有权利保留</p>
+                <p>&copy; 2025 HUST-MengFei - 保留网站的解释权</p>
             </div>
         </div>
     </footer>
