--- a/web/tasks.html
+++ b/web/tasks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学习任务管理 - 学海航行</title>
+    <title>学习任务管理 - 觅我</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -159,7 +159,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <i class="fas fa-graduation-cap me-2"></i>学海航行
+                <i class="fas fa-graduation-cap me-2"></i>觅我
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -367,7 +367,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>学海航行</h5>
+                    <h5>觅我</h5>
                     <p>一个帮助你跟踪学习进度、记录学习点滴的平台。</p>
                 </div>
                 <div class="col-md-3">
@@ -388,7 +388,7 @@
             </div>
             <hr class="my-4 bg-light">
             <div class="text-center">
-                <p>&copy; 2023 学海航行 - 所有权利保留</p>
+                <p>&copy;2025 HUST-MengFei - 保留网站的解释权</p>
             </div>
         </div>
     </footer>
