--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="hero-logo">
-                        <img src="hust_logo.png" alt="华中科技大学校徽" class="hust-logo">
+                        <!-- 修改图片路径为 image/hust_logo.png -->
+                        <img src="image/hust_logo.png" alt="华中科技大学校徽" class="hust-logo">
                     </div>
                 </div>
                 <div class="col-lg-6">
