--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <p class="lead mb-4">可视化学习轨迹，记录成长点滴，让每一次进步都有迹可循</p>
                         <a href="web/tasks.html" class="btn btn-primary btn-lg">开始记录</a>
                         <div class="mt-4">
-                            <h5 class="text-muted">华中科技大学</h5>
+                            <h5 class="text-muted">华中科技大学计算机学院孟飞</h5>
                         </div>
                     </div>
                 </div>
@@ -657,3 +657,4 @@
     </script>
 </body>
 </html>
+
